src/components/styles/App.css
.App {
  height: 100vh;
  width: 100vw;
  max-width: 100%;
  background-color: rgba(190, 228, 229, 0.548);
  display: flex;
  flex-direction: column;
  
  align-items: center;
}

.App__h1 {
  margin-top: 0;
  padding-top: 2rem;
}

.AppLists {
  display: flex;
  justify-content: space-between;
  width: 90%;
  margin: 3rem;
  padding: 1rem;
}

.App__span {
  background-color: rgba(84, 196, 172, 0.507);
  width: 100%;
  text-align: center;
  padding: 1rem;
}

@media only screen and (max-width: 600px) {
  .App {
    height: 140vh;
    width: 100vw;
    max-width: 100%;
    background-color: rgba(190, 228, 229, 0.548);
    display: flex;
    flex-direction: column;
    align-self: start;
  }
  
  .AppLists {
    width: 99%;
    max-width: 100%;
    flex-direction: column-reverse;
    padding: 0;
    margin: 0;
  }

  .App__span {
    max-width: 90%;
  }

  li {
    font-size: xx-small;
  }
}

